--- a/__razvanvideo/home/templates/home/contact.html
+++ b/__razvanvideo/home/templates/home/contact.html
@@ -9,19 +9,21 @@
 <!-- Block content -->
 {% block content %}
 			
-	<div class="inner_body">
-		<!-- Page Header -->
-		<div class="page-header type1">
-			<div class="page-header-content text-center">
-				<div class="container">
-					<h1 class="heading">
-						Contact Us
-						<span class="icon"><i class="fa fa-camera"></i></span>
-					</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed bibendum leo. Mauris <br> massa eleifend et purus vel feugiat rutrum nulla cras vitae est.</p>
-				</div>
+<div class="inner_body bg_gray">
+	<!-- Page Header -->
+	<div class="page-header type2">
+		<div class="page-header-content text-center">
+			<div class="container">
+				<h1 class="heading">
+					Contactati-ma
+					<span class="icon"><i class="fa fa-camera"></i></span>
+				</h1>
+				<p>Toate clipurile din portofoliu.</p>
+				<div class="sign"><img src="{% static 'home/images/sign.png' %}" alt=""></div>
 			</div>
 		</div>
+	</div>
+
 
 		<div class="contact_body">
 			<div class="container">
@@ -86,7 +88,6 @@
 					</div>
 				</div>
 			</div>
-			<div id="googleMap" class="map"></div>
 		</div>
 
 	</div>
