--- a/__razvanvideo/home/templates/home/home.html
+++ b/__razvanvideo/home/templates/home/home.html
@@ -36,7 +36,7 @@
 									<h4 class="slider-tag">Evenimente</h4>
 									<h1 class="slide_heading"><span>Nunta</span></h1>
 									<div class="button_group">
-										<a href="{% url 'video-nunta-constanta' %}" class="button effect_2 fade_black_button"><span>Portofoliu Nunta</span></a>
+										<a href="{% url 'toate-videoclipurile-constanta' %}" class="button effect_2 fade_black_button"><span>Portofoliu Nunta</span></a>
 									</div>
 								</div>
 								<a class="popup fancyswiper" href="{% static 'home/images/slider/razvan-video-Constanta-filmari-nunta-botez.jpg' %}" data-fancybox="images">
@@ -52,7 +52,7 @@
 									<h4 class="slider-tag">Momente unice</h4>
 									<h1 class="slide_heading"><span>Botez</span></h1>
 									<div class="button_group">
-										<a href="{% url 'video-botez-constanta' %}" class="button effect_1 fade_black_button"><span>Portofoliu Botez</span></a>
+										<a href="{% url 'toate-videoclipurile-constanta' %}" class="button effect_1 fade_black_button"><span>Portofoliu Botez</span></a>
 									</div>
 								</div>
 								<a class="popup fancyswiper" href="{% static 'home/images/slider/razvan-video-constanta-video-botez-evenimente-bebelusi-video-la-biserica.jpg' %}" data-fancybox="images">
@@ -68,11 +68,11 @@
 									<h4 class="slider-tag">Si alte evenimente</h4>
 									<h1 class="slide_heading"><span>Motul</span></h1>
 									<div class="button_group">
-										<a href="{% url 'alte-evenimente-constanta' %}" class="button effect_3 fade_black_button"><span>Alte evenimente</span></a>
+										<a href="{% url 'toate-videoclipurile-constanta' %}" class="button effect_3 fade_black_button"><span>Alte evenimente</span></a>
 									</div>
 								</div>
 								<a class="popup fancyswiper" href="{% static 'home/images/slider/video-evenimente-zile-de-nastere-clipuri-mot.jpg' %}" data-fancybox="images">
-									<img src="{% static 'home/images/slider/bg_5.jpg' %}" alt="icon">
+									<img src="{% static 'home/images/icon-img/g-icon2.png' %}" alt="icon">
 								</a>
 							</div>
 						</div>
